--- a/_posts/2016-10-25-git.md
+++ b/_posts/2016-10-25-git.md
@@ -129,6 +129,12 @@ With `git remote` you can freely transport your own git repository or copy other
 
 - add a new remote under name `remote_name`:    
 	`git remote add remote_name url`
+	
+- rename a current remote:   
+	`git remote rename cur_name new_name`
+
+- change url of a current remote:   
+	`git remote set-url remote_name new_url`
 
 - get most recent update from remote (saved in `origin/master` branch) : `git fetch origin`    
 	
