python.md update

--- a/_posts/2017-3-24-python.md
+++ b/_posts/2017-3-24-python.md
@@ -4,7 +4,7 @@ date:   2017-3-24
 layout: single
 author_profile: true
 comments: true
-tags: [ python ]
+tags: 
 ---
 
 **Resources**
@@ -328,9 +328,15 @@ class myclass:
     # printing method
     def printmyclass(self):
         print("Name:",self.name)
-        print("Height:",self.height,"\nWeight:",self.weight)
+		print("Height:",self.height,"\nWeight:",self.weight)
         print("Your bmi is calculated as: %.3f" % self.bmi)
 
+	# destroy this object:
+	# Python deletes built-in types or class instances automatically to free the memory space
+	# just to pop out a message
+	def __del__(self):
+        print(self.__class__.__name__, "destroyed")
+	
 ## use a class
 me = myclass("PowerGod",1.72,68)
 me.printmyclass() 
@@ -346,6 +352,26 @@ me.printmyclass()
 ## selected built-in attributes
 me.__doc__   # documentation string
 me.__dict__ # dictionary of class's namespace
+```
+
+Class inheritance, assume that `myclass` is defined, then we can define a `child` subclass that inherit all its attributes:
+
+```python
+class child(myclass):
+    """
+    this is a subclass of myclass
+    all myclass's attributes can be inherited
+    """
+    major=""
+    year=1993
+
+    def printchild(self):
+        print(self.name," is going to graduate in ",self.year)
+
+me2 = child("PowerGod",1.00,45.00) # using parent class method
+me2.printchild()  # using subclass method
+me2.printmyclass() # using parent class method
+
 ```
 
 ## <a name="LIBRARY" ></a> Packages and Modules
