python.md update

--- a/_posts/2017-3-24-python.md
+++ b/_posts/2017-3-24-python.md
@@ -11,6 +11,7 @@ tags:
 
 - for beginners without much programming background: [Learn python the hard way](https://learnpythonthehardway.org/book/)
 - a more systematic tutorial: [python: tutorialspoint](https://www.tutorialspoint.com/python/index.htm)
+- from R to Python: [python for R](file:///Users/lizeng/Dropbox/Research/Z_Research%20notes/programming/python_for_R.pdf)
 
 **Contents**
 
@@ -21,6 +22,8 @@ tags:
 5. [Control Flow](#CF)
 6. [**Data Structures & Classes**](#DS)
 7. [**Modules**](#LIBRARY)
+8. [Python for data analysis](#data)
+9. [Other](#other)
 
 ## <a name="SC" ></a> Special characters 
 
@@ -30,6 +33,7 @@ tags:
 - `\`: line continuation character
 - `' '` and `" "` have the same effects
 - use `;` between statements to allow multiple statements in a single line
+- `True, False, None`
 
 
 ## <a name="VO" ></a>Variables and operators
@@ -304,6 +308,7 @@ mydict.get(key,default=None) # get value for key; if no key found, return defaul
 mydict.clear()   # empty the mydict
 mydict.items()   # returns a list of tuple (key, value) pairs
 mydict.update(mydict2)  # add mydict2 elements to mydict; repeated keys in mydict2 will be discarded
+mydict.pop(key) # remove an item
 ```
 
 #### CLASSES
@@ -317,6 +322,7 @@ class myclass:
     height = 0
     weight = 0
     bmi = 0
+    __secret = "hidden variable"
 
     # class initiation method
     def __init__(self,name, height, weight):
@@ -352,9 +358,13 @@ me.printmyclass()
 ## selected built-in attributes
 me.__doc__   # documentation string
 me.__dict__ # dictionary of class's namespace
+
+# private variables
+# name the variables you want to hide with double underscore prefix
+print (me.__secret) # will give error
 ```
 
-Class inheritance, assume that `myclass` is defined, then we can define a `child` subclass that inherit all its attributes:
+**Class inheritance**: assume that `myclass` is defined, then we can define a `child` subclass that inherit all its attributes:
 
 ```python
 class child(myclass):
@@ -419,20 +429,46 @@ file2.item1()
 
 ### Useful Modules/Packages
 - **the `os` module**: provide functions to take actions related to operating system, eg:
-	- `os.getcwd()` : current working directory
+	- `os.getcwd(),os.chdir()` : get current working directory, change diretory
 	- `os.mkdir(path)` : make directory
+	- `os.listdir()`: list files
 	- `os.remove(), os.rmdirs(), os.rename()`
-	
 
-## Others
+- **`re`** module for regular expressions:   
+	[Python regular expression](https://www.tutorialspoint.com/python/python_reg_expressions.htm)
+	
+## <a name="data"></a> Python for data analysis
+The built-in data structures of Python are not easy to use when performing data analysis. A couple of popular packages provide Python many R-like functionalities, and are perfect for data scientists.
+
+- **`NumPy`** for
+	- math function evaluations (on arrays, list etc)
+	- sampling from distribution (`numpy.random.***`)
+	- array (matrix) manipulation
+	- tutorial: [NumPy quick start](https://docs.scipy.org/doc/numpy-dev/user/quickstart.html)
+	
+- **`Pandas`** for
+	- `Series`: fixed-size dict
+	- `DataFrame`: most commonly used object
+	- `Pandas` objects are suitable for most `Numpy` functions 
+	- tutorial:   
+		[pandas data structure](http://pandas.pydata.org/pandas-docs/stable/dsintro.html#dsintro)   
+		[pandas tutorial](http://pandas.pydata.org/pandas-docs/stable/10min.html)
+- **`matplotlib`** for
+	- tutorial: [matplotlib tutorial](https://matplotlib.org/users/pyplot_tutorial.html#controlling-line-properties)
+- **`sklearn`** for
+	- machine learning tools
+
+## <a name="other"></a> Others
 - get help:    
 	type `pydoc python_function` in terminal to get document for a python function
 	
 - IDE recommendation
 	- [Anaconda](https://www.continuum.io/downloads)
+- object identification:    
+	`id(var)`, unique identification number for each object
 
 - assertion:   
-	`assert expression` : if expression result in `False`, an error is incurred
+	`assert expression, "error message"`: if expression result in `False`, an error is incurred, and the error message is printed
 
 - **`try-except` exception handling, and `raise` exceptions**
 
