--- a/_posts/2017-3-24-python.md
+++ b/_posts/2017-3-24-python.md
@@ -1,6 +1,6 @@
 ---
 title:  "Python quick reference"
-date:   2017-3-24
+date:   2017-5-12
 layout: single
 author_profile: true
 comments: true
@@ -125,7 +125,6 @@ tags:
 	# lambda function example
 	g = lambda x: x**2
 	f = lambda x,y: x**2 + y**2
-	
 	print g(3)
 	print g(1,2)
 	```
@@ -241,6 +240,11 @@ mystring = "a test sentence"
 
 # member functions
 mystring.split(' ') # split by ' ' into a vector of strings
+mystring.strip() # remove the return at the end (if any)
+mystring.split(' ') # split strings 
+mystring.join(seq) # concatenate values in seq using mystring as separater
+mystring.endswith(str) # test the end of mystring
+mystring.replace(str1, str2) # replace str1 with str2, return new string
 
 # others
 str[1:3] 
@@ -248,6 +252,8 @@ str[2:] # subsetting
 str*2 # string repitition
 str +  "another string"  # string concatenation
 str() # convert to string
+
+str[1]='a' #DOES NOT WORK! strings do not support modification
 ``` 
 
 #### List
@@ -433,6 +439,14 @@ file2.item1()
 	- `os.mkdir(path)` : make directory
 	- `os.listdir()`: list files
 	- `os.remove(), os.rmdirs(), os.rename()`
+	- `os.walk(dir)`: directory traversal in `dir`
+
+- **`sys`**: system-specific parameters and functions
+	- `sys.argv`: command line inputs
+	- `sys.exit(code)`: exit program with `code`
+
+- **`subprocess`**
+	- `subprocess.call(cmd, shell=True)`: run `cmd` as shell command
 
 - **`re`** module for regular expressions:   
 	[Python regular expression](https://www.tutorialspoint.com/python/python_reg_expressions.htm)
@@ -445,18 +459,44 @@ The built-in data structures of Python are not easy to use when performing data 
 	- sampling from distribution (`numpy.random.***`)
 	- array (matrix) manipulation
 	- tutorial: [NumPy quick start](https://docs.scipy.org/doc/numpy-dev/user/quickstart.html)
-	
+
+- **`SciPy`** for scientific computing
+	- linear algebra
+	- numerical integration
+	- optimization
+
 - **`Pandas`** for
 	- `Series`: fixed-size dict
 	- `DataFrame`: most commonly used object
 	- `Pandas` objects are suitable for most `Numpy` functions 
+	- import (or write) files from different data structures:  
+		-  `Series.to_csv, Series.from_csv`
+		-  `DataFrame.to_csv, DataFrame.from_csv`
 	- tutorial:   
 		[pandas data structure](http://pandas.pydata.org/pandas-docs/stable/dsintro.html#dsintro)   
-		[pandas tutorial](http://pandas.pydata.org/pandas-docs/stable/10min.html)
+		[pandas tutorial](http://pandas.pydata.org/pandas-docs/stable/tutorials.html)
 - **`matplotlib`** for
 	- tutorial: [matplotlib tutorial](https://matplotlib.org/users/pyplot_tutorial.html#controlling-line-properties)
 - **`sklearn`** for
 	- machine learning tools
+- **`yaml`** for
+	- read parameters from files:
+
+	```python
+	"""
+	The following is my parameter file:
+	par1: a
+	par2: [b,c]
+	par3: (d,e,f)
+	"""
+	import yaml
+	txt = open(file_path)
+	pars = yaml.load(txt)
+	txt.close()
+	```
+	Then the parameters are saved as elements in `pars` which is a `dict` type variable.
+
+- **`traceback`** for debugging
 
 ## <a name="other"></a> Others
 - get help:    
@@ -499,3 +539,6 @@ The built-in data structures of Python are not easy to use when performing data 
 	
 	```
 	for a list of Exception types, see [exception handling](https://www.tutorialspoint.com/python/python_exceptions.htm)
+	
+- reload module in interactive mode:   
+	when developing the package,  you need to constantly modify and update the modules that have been imported. To re-import after modification, you need to use `importlib.reload(module.file)`
