python.md: added pickle

--- a/_posts/2017-3-24-python.md
+++ b/_posts/2017-3-24-python.md
@@ -442,6 +442,7 @@ file2.item1()
 	- `os.walk(dir)`: directory traversal in `dir`
 
 - **`sys`**: system-specific parameters and functions
+	- `sys.path ...`: modify system searching path
 	- `sys.argv`: command line inputs
 	- `sys.exit(code)`: exit program with `code`
 
@@ -495,6 +496,22 @@ The built-in data structures of Python are not easy to use when performing data 
 	txt.close()
 	```
 	Then the parameters are saved as elements in `pars` which is a `dict` type variable.
+
+- **`pickle`** for saving and restoring python work space:
+
+	```python
+	import pickle
+	# Save objects:
+	f = open("results.pckl","wb")
+	pickle.dump([obj1,obj2,obj3],f)
+	f.close()
+	```
+
+# restore the objects:
+f=open("results.pckl","rb")
+obj1,obj2,obj3 = pickle.load(f)
+f.close()
+```
 
 - **`traceback`** for debugging
 
