python.md: bitwise operations

--- a/_posts/2017-3-24-python.md
+++ b/_posts/2017-3-24-python.md
@@ -47,7 +47,18 @@ tags:
 	a**b # exponential: a^b
 	
 	# bitwise operator same as C
+	A | B #Set union 
+	A & B #Set intersection
+	A & ~B	#Set subtraction 
+	ALL_BITS ^ A or ~A 	#Set negation 
+	A |= 1 << bit 	# Set 1 to bit 
+	A &= ~(1 << bit) 	# Clear bit 
+	(A & 1 << bit) != 0 	# Test bit 
+	A&-A or A&~(A-1) or x^(x&(x-1)) 	#Extract last bit 
+	A&(A-1) 	#Remove last bit 
+	~0 	#Get all 1-bits
 	```
+	for a review of bitwise operations: [bitwise operations review](https://discuss.leetcode.com/topic/50315/a-summary-how-to-use-bit-manipulation-to-solve-problems-easily-and-efficiently)
 
 - Logical variables: `True, False`
 - **Logical operators**:    
@@ -245,6 +256,7 @@ mystring.split(' ') # split strings
 mystring.join(seq) # concatenate values in seq using mystring as separater
 mystring.endswith(str) # test the end of mystring
 mystring.replace(str1, str2) # replace str1 with str2, return new string
+mystring.isupper(); mystring.islower() # test upper/lower case
 
 # others
 str[1:3] 
@@ -254,6 +266,8 @@ str +  "another string"  # string concatenation
 str() # convert to string
 
 str[1]='a' #DOES NOT WORK! strings do not support modification
+ord('x') # letter to ASCII code
+chr(5) # code to letter
 ``` 
 
 #### List
@@ -275,6 +289,10 @@ mylist.count(item)  # count the frequency of item
 
 # others
 mylist[2:]  # subsetting
+mylist[-3:]
+mylist[:2]
+mylist[1:2]
+mylist[::-1] # reversing
 mylist*2 # repetition
 mylist + list2 # list concatenation
 del mylist[2] # item deletion
