python.md update

--- a/_posts/2017-3-24-python.md
+++ b/_posts/2017-3-24-python.md
@@ -281,6 +281,7 @@ mylist = ['a'] * 10  # initialize with length
 mylist.append() # append to the end of list
 mylist.sort() # sort the list
 mylist.pop()	# pop the last item
+mylist.pop(i) # pop the ith
 mylist.reverse()
 mylist.insert(index, obj) # insertion 
 mylist.remove(object) # deletion
@@ -333,6 +334,7 @@ mydict.clear()   # empty the mydict
 mydict.items()   # returns a list of tuple (key, value) pairs
 mydict.update(mydict2)  # add mydict2 elements to mydict; repeated keys in mydict2 will be discarded
 mydict.pop(key) # remove an item
+mydict.setdefault(key,default_value) # use default_value if key not found
 ```
 
 #### CLASSES
@@ -452,12 +454,7 @@ file2.item1()
   [python software fundation : modules](https://docs.python.org/3/tutorial/modules.html#packages) 
 
 ### Useful Modules/Packages
-- **the `os` module**: provide functions to take actions related to operating system, eg:
-	- `os.getcwd(),os.chdir()` : get current working directory, change diretory
-	- `os.mkdir(path)` : make directory
-	- `os.listdir()`: list files
-	- `os.remove(), os.rmdirs(), os.rename()`
-	- `os.walk(dir)`: directory traversal in `dir`
+- **`os`**: provide functions to take actions related to operating system
 
 - **`sys`**: system-specific parameters and functions
 	- `sys.path ...`: modify system searching path
@@ -494,7 +491,7 @@ The built-in data structures of Python are not easy to use when performing data 
 	- tutorial:   
 		[pandas data structure](http://pandas.pydata.org/pandas-docs/stable/dsintro.html#dsintro)   
 		[pandas tutorial](http://pandas.pydata.org/pandas-docs/stable/tutorials.html)
-- **`matplotlib`** for
+- **`matplotlib`** for visualization
 	- tutorial: [matplotlib tutorial](https://matplotlib.org/users/pyplot_tutorial.html#controlling-line-properties)
 - **`sklearn`** for
 	- machine learning tools
@@ -530,7 +527,8 @@ The built-in data structures of Python are not easy to use when performing data 
 	f.close()
 	```
 
-- **`traceback`** for debugging
+- **data structure** modules:
+	- `heapq` for implementations of heaps
 
 ## <a name="other"></a> Others
 - get help:    
@@ -575,4 +573,4 @@ The built-in data structures of Python are not easy to use when performing data 
 	for a list of Exception types, see [exception handling](https://www.tutorialspoint.com/python/python_exceptions.htm)
 	
 - reload module in interactive mode:   
-	when developing the package,  you need to constantly modify and update the modules that have been imported. To re-import after modification, you need to use `importlib.reload(module.file)`
+	when developing the package,  you need to constantly modify and update the modules that have been imported. To re-import after modification, you need to use `importlib.reload(module.file)`te
