python.md update

--- a/_posts/2017-3-24-python.md
+++ b/_posts/2017-3-24-python.md
@@ -257,6 +257,8 @@ mystring.join(seq) # concatenate values in seq using mystring as separater
 mystring.endswith(str) # test the end of mystring
 mystring.replace(str1, str2) # replace str1 with str2, return new string
 mystring.isupper(); mystring.islower() # test upper/lower case
+mystring.index('a')
+mystring.count('c') # get index and counts of a substring
 
 # others
 str[1:3] 
@@ -279,7 +281,7 @@ mylist = ['a'] * 10  # initialize with length
 
 # member functions
 mylist.append() # append to the end of list
-mylist.sort() # sort the list
+mylist.sort() # sort the list (in place)
 mylist.pop()	# pop the last item
 mylist.pop(i) # pop the ith
 mylist.reverse()
