python.md update

--- a/_posts/2017-3-24-python.md
+++ b/_posts/2017-3-24-python.md
@@ -1,6 +1,6 @@
 ---
 title:  "Python quick reference"
-date:   2017-5-12
+date:   2017-8-25
 layout: single
 author_profile: true
 comments: true
@@ -23,7 +23,8 @@ tags:
 6. [**Data Structures & Classes**](#DS)
 7. [**Modules**](#LIBRARY)
 8. [Python for data analysis](#data)
-9. [Other](#other)
+9. [Selected topics](#topics)
+10. [Other](#other)
 
 ## <a name="SC" ></a> Special characters 
 
@@ -266,6 +267,7 @@ str[2:] # subsetting
 str*2 # string repitition
 str +  "another string"  # string concatenation
 str() # convert to string
+list(s) # turn string into list of characters
 
 str[1]='a' #DOES NOT WORK! strings do not support modification
 ord('x') # letter to ASCII code
@@ -337,6 +339,17 @@ mydict.items()   # returns a list of tuple (key, value) pairs
 mydict.update(mydict2)  # add mydict2 elements to mydict; repeated keys in mydict2 will be discarded
 mydict.pop(key) # remove an item
 mydict.setdefault(key,default_value) # use default_value if key not found
+```
+
+
+#### Sets
+
+```python
+# set initialization
+s = set([...]) 
+
+# operations
+s.add('element') # add elements
 ```
 
 #### CLASSES
@@ -532,6 +545,21 @@ The built-in data structures of Python are not easy to use when performing data 
 - **data structure** modules:
 	- `heapq` for implementations of heaps
 
+## <a name="topics"></a> Selected topics
+**Sorting**
+
+```python
+# sort list using member function
+# note: tuple, dict do not have .sort() member
+ls =[a,b,c]
+ls.sort() # default sorting
+ls.sort(key = myfun) # customized sorting
+
+# sort using sorted():
+# note this can be used to sort tuple, dict and other objects
+sorted(obj, key = myfun) 
+```
+
 ## <a name="other"></a> Others
 - get help:    
 	type `pydoc python_function` in terminal to get document for a python function
@@ -575,4 +603,4 @@ The built-in data structures of Python are not easy to use when performing data 
 	for a list of Exception types, see [exception handling](https://www.tutorialspoint.com/python/python_exceptions.htm)
 	
 - reload module in interactive mode:   
-	when developing the package,  you need to constantly modify and update the modules that have been imported. To re-import after modification, you need to use `importlib.reload(module.file)`te
+	when developing the package,  you need to constantly modify and update the modules that have been imported. To re-import after modification, you need to use `importlib.reload(module.file)`.
