--- a/_posts/2017-3-24-python.md
+++ b/_posts/2017-3-24-python.md
@@ -171,8 +171,11 @@ tags:
 	prompt = '>' # optional
 	print "tell me your age: "
 	age = raw_input(prompt)
-	
+	#eg
 	age = raw_input("How old are you?")
+	#or
+	import sys
+	data = sys.stdin.read() # read from input
 	```
 	- you need to use `print( )` in python3 or later versions
 
@@ -216,6 +219,12 @@ elif cond2:
 	statement2
 else:
 	statement3
+	
+# conditional expression	
+x = val1 if condition else val2 # same as
+if condition: x = val1
+else: x = val2
+
 	
 # for loop:
 for iterator in range:
@@ -575,7 +584,13 @@ sorted(obj, key = myfun)
 - **`try-except` exception handling, and `raise` exceptions**
 
 	```python
-	# exception handling
+	# simple exception handling
+	try:
+		code may have error
+	except:
+		what to do when error exists
+	
+	# more exception handling
 	try:
 	   your operations ;
 	except ExceptionI, ExceptionII:
