--- a/_posts/2016-10-25-git.md
+++ b/_posts/2016-10-25-git.md
@@ -1,6 +1,6 @@
 ---
 title:  "Git for version control"
-date:   2016-12-18
+date:   2018-2-21
 layout: single
 author_profile: true
 comments: true
@@ -150,17 +150,22 @@ With `git remote` you can freely transport your own git repository or copy other
 ## Collaboration 
 Git can make life easier when you are doing collaboration work with other people. You may have a shared repository on Github, and each of your pull the repository to your local laptop, and work on different branches. Here's how you contribute to the online repository:
 
-1.Fetch and merge changes from the remote
+1.`git fetch` and `git merge` (= `git pull`) changes from the remote
 
-2.Create a branch to work on a new project feature
+2.Develop the feature on your branch and commit your work
 
-3.Develop the feature on your branch and commit your work
+3.`git pull` from the remote again (in case new commits were made while you were working)
 
-4.Fetch and merge from the remote again (in case new commits were made while you were working)
+4.Push your branch up to the remote for review
 
-5.Push your branch up to the remote for review
+At step 3 you can have a problem: after you make changes, the remote repository may have changed (maybe your collaborator has updated it). So `git pull` would fail in this case, unless you resolve the fatal file differences. `git mergetool` becomes very handy for this purpose ([link](https://stackoverflow.com/questions/161813/how-to-resolve-merge-conflicts-in-git)).
 
-
+## Others
+- **`git grep string`**:   
+	search for `string` in git repository. This is extremely useful when you want to change the name of certain functions or variables, as you can locate which  files contain the things you wanna change. 
+	
+- **`git commit --amend`**:   
+	modify the most recent `git commit` message
 
 
 
