--- a/_posts/2018-5-25-PhdData.md
+++ b/_posts/2018-5-25-PhdData.md
@@ -17,15 +17,17 @@ tags: [analysis, phd]
 ### 总PhD人数
 下图是1957到2016美帝每年PhD总毕业人数。60年间毕业人数从10000涨到50000多。近十年保持了大概每年1000人的增幅。
 
-![](https://raw.githubusercontent.com/zengliX/Notebooks/master/Figures/PhDdata/total_phd.png)
+<img src="https://raw.githubusercontent.com/zengliX/Notebooks/master/Figures/PhDdata/total_phd.png" width="70%">
 
 ###各领域PhD人数
+
 那么哪些领域的PhD最多呢？以下是1986到2016年的数据。可以看到，从人数上来说BBS和Psychology and social science 独占鳌头，但这么比有点不公平，因为BBS只是Life Science下面的一个二级领域，但 Psychology and social science 是一个一级领域。所以还是BBS最厉害，最开始的基数就最大，增长也是最多的。不愧是生物学的世纪👍。CS的绝对人数比我想象的少了些，但是增幅是这里面最大的，从86年400人左右增加到了16年2000人。
 
 
 ![](https://raw.githubusercontent.com/zengliX/Notebooks/master/Figures/PhDdata/phd.fields.png)
 
 ### PhD最多的学校
+
 2016年一共产生约54000新PhD，来自400多所不同高校／研究所。以下是PhD发的最多的40所大学，来看看能不能找到你的母校😎。我耶压线上榜。PhD最多的学校，反正我是没想到，大德州大学奥斯丁！毕竟是Amazon第二总部的有力候选城市。
 
 ![](https://raw.githubusercontent.com/zengliX/Notebooks/master/Figures/PhDdata/top_univ.png)
@@ -48,8 +50,7 @@ tags: [analysis, phd]
 ### International PhD 十大来源国
 再来看看top 10贡献国际PhD的国家。2016年数据，我大天朝以5000人，绝对的优势居首，所以平均每10个PhD里面就有一个从我国来的。其次是印度，也在意料之中。伊朗就很意外，竟是第四多的国家，而且近10年PhD增长了有5倍。
 
-![](https://raw.githubusercontent.com/zengliX/Notebooks/master/Figures/PhDdata/visa_count.png)
-
+<img src="https://raw.githubusercontent.com/zengliX/Notebooks/master/Figures/PhDdata/visa_count.png" width="70%">
 
 
 ## PhD要读多久？
