--- a/_posts/2016-10-25-git.md
+++ b/_posts/2016-10-25-git.md
@@ -1,6 +1,6 @@
 ---
 title:  "Git for version control"
-date:   2018-2-21
+date:   2019-01-06
 layout: single
 author_profile: true
 comments: true
@@ -42,7 +42,8 @@ Git is a great version control tool. It allows you to keep a history of your cod
 - check the changes in file with last staged version: `git diff filename`       
 	changes are marked with `+` or `-`   
 
-- show your commit history: `git log`   
+- show your commit history: `git log` 
+	- `git log --graph` show commit tree  
 
 ```bash
 # show latest n commits
@@ -150,17 +151,39 @@ With `git remote` you can freely transport your own git repository or copy other
 ## Collaboration 
 Git can make life easier when you are doing collaboration work with other people. You may have a shared repository on Github, and each of your pull the repository to your local laptop, and work on different branches. Here's how you contribute to the online repository:
 
-1.`git fetch` and `git merge` (= `git pull`) changes from the remote
+- On master branch, `git fetch` and `git merge` (= `git pull`) changes from the remote
 
-2.Develop the feature on your branch and commit your work
+- Develop the feature on `your_branch` and commit your work.  
+	- after your code is ready, you can push your branch (or take a git diff file) to the online repo for code review
 
-3.`git pull` from the remote again (in case new commits were made while you were working)
 
-4.Push your branch up to the remote for review
+- Switch back to master, `git pull` from the remote again (in case new commits were made while you were working)
+
+- `git merge <your_branch>` to add your code to repo
+
+- Push your branch up to the remote for review
 
 At step 3 you can have a problem: after you make changes, the remote repository may have changed (maybe your collaborator has updated it). So `git pull` would fail in this case, unless you resolve the fatal file differences. `git mergetool` becomes very handy for this purpose ([link](https://stackoverflow.com/questions/161813/how-to-resolve-merge-conflicts-in-git)).
 
 ## Others
+- **Commit references**
+	- **Previous Movements**
+		- `HEAD`
+		- `HEAD@{3}`: where your head was 3 **moves** ago 
+		- head movements are listed in `git reflog`
+	- **Parents**
+		- `HEAD^` = `HEAD^1`
+		- `HEAD^^`: first parent of first parent
+		- can be used with any commit as well, eg `<commit_name>^2`
+		- `***^2` only works with merge commits, where there are two parents
+	- **Ancestors**
+		- `HEAD~`: first parent
+		- `HEAD~~`: first parent of first parent
+		- `HEAD~{5}`: ....
+	- **Double dot**: range selection
+		- `master..your_branch`
+		- `git log master..your_branch`: all commits reachable on `your_branch` but not on `master`
+
 - **`git grep string`**:   
 	search for `string` in git repository. This is extremely useful when you want to change the name of certain functions or variables, as you can locate which  files contain the things you wanna change. 
 	
