--- a/_posts/2016-11-16-bash.md
+++ b/_posts/2016-11-16-bash.md
@@ -1,10 +1,10 @@
 ---
 title:  "some BASH topics"
-date:   2016-12-02
+date:   2019-01-11
 layout: single
 author_profile: true
 comments: true
-tags: [bash]
+tags: [bash, linux, command]
 ---
 
 
@@ -23,6 +23,7 @@ Quick links:
 - [sed](#sed)
 - [head,tail](#head)
 - [Others](#others)
+- [Useful Links](#Link)
 
 
 Online references:
@@ -32,39 +33,85 @@ Online references:
 ## <a name="regex"></a>Regular Expressions
 Regular expressions(REGEX) are sets of characters and/or _metacharacters_ that **match patterns** ---- [REGEX intro](http://tldp.org/LDP/abs/html/x17129.html).
 
-A REGEX can contain:
+[Video tutorial](https://www.youtube.com/watch?v=sa-TUpSx1JA)
 
-- character set, eg: `abcd`
-- anchor, eg:`^,$` to match beginning and end of string
-- modifiers, eg: `?,\`
+####Escapes: 
+characters that have special meanning, to be escaped
 
-**REGEX examples** 
-  
-- `?`: match any single characters 
-- `[abc]`: match any characters enclosed
-- `[c-g0-7]`: match letters from c to g, or numbers from 0 to 7
-- `[^b-y]`: except 
-- `[a1-a2]`: ascii code from `a1` to `a2`
-- `[!9]`: NOT 9
-- `+`: match one or more if previous char
 
 ```bash
-echo aaazz | grep "a\+z"
+.[{()\^$|?*+
 ```
 
-- [:upper:] uppercase letters
-- [:lower:] lowercase letters
-- [:alpha:] alphabetic (letters) meaning upper+lower (both uppercase and lowercase letters)
-- [:digit:] numbers in decimal, 0 to 9
-- [:alnum:] alphanumeric meaning alpha+digits (any uppercase or lowercase letters or any decimal digits)
-- [:space:] whitespace meaning spaces, tabs, newlines and similar
-- [:graph:] graphically printable characters excluding space
-- [:print:] printable characters including space
-- [:punct:] punctuation characters meaning graphical characters minus alpha and digits
-- [:cntrl:] control characters meaning non-printable characters
-- [:xdigit:] characters that are hexadecimal digits.
+#### Match Pattern
 
-Functions such as `awk` and `egrep` provide even richer set of metacharacters.
+```bash
+. - any character except new line
+\d - Digit (0-9)
+\D - Not a Digit (0-9)
+\w - word Character (a-z, A-Z, 0-9, _)
+\W - Not work character
+\s - white spaces
+\S - not white space
+
+# anchors, don't match any characters
+# match invisible positions
+\b - Word Boundary
+\B - Not word Boundary
+^  - beginning of a string
+$ - end of string
+
+# character set
+[...]  # match any one character in set
+-  # specify range when used between number/letters
+[^]  # not in the set 
+|    # either or 
+( )  # Group
+ 
+# quantifier
+* - match 0 or more
++ - match 1 or more
+? - match 0 or One
+{3} - match exact number
+{3,4} - match a range of numbers (Minimum, Maximum)
+```
+
+#### lookaround: lookahead and lookbehind    
+
+Lookaround is an **assertion** (like line start or end anchor). It actually matches with characters, but then give up the match, and **only returns match or no match**. It **does not consume characters** in the string.
+
+Basic syntax:
+
+- lookahead:
+	- positive lookahead: `(?=(regex))`
+	- negative lookhead: `(?!(regex))`
+
+- lookbehind:
+	- positive: `(?<=(regex))`
+	- negative: `(?<!(regex))`
+
+Example:
+
+```c
+// match "book" with "the" after it
+book(?=.*the)
+
+// match "book" with "the" before it
+(?<=the.*)book
+```
+	
+#### More Examples:
+
+- word boundary: `\bHe`, # He eHe
+- character set: `a[de]c`, adc, aec
+- dash for range: `[a-z0-9A-Z]`
+- not in set: `[^1-3]`
+- quantifier examples
+	- `\d{3}`: 123
+	- `Mr\.?\s[A-Z]\w*`: Mr. Zeng, Mr Zeng
+- Group examples:
+	- `(Mr|Mrs)\.?\s\w+`: Mr. Zeng, Mrs Zeng ...
+
 
 ## <a name="globbing"></a> File Globbing
 File Globbing and REGEX can be confusing. REGEX is used in functions for **matching text in files**, while globbing is used by shells to **match file/directory names** using wildcards.
@@ -90,29 +137,6 @@ Wildcards (some in REGEX may also apply):
 	- `${var[@]:s_ind:l}` gives you the length `l` sub-array starting at index `s_ind`. 
 	- Can also replace `@` with `*`.
 
-## Resolve symbolic links
-Say `courses` is a symbolic link I created. If I `cd` this link, and then print working directory:
-
-```bash
-$ cd courses 
-$ pwd
-/Users/lizeng/paths/courses
-```
-It's showing the symbolic path, not the absolute path. To get the absolute path, we can resolve the link through: 
-
-```bash 
-$ pwd -P 
-/Users/lizeng/Google Drive/Yale/courses
-
-# same also works for many other commands
-$ cd courses; cd ..; pwd
-/Users/lizeng/paths 
-$ cd courses; cd -P ..;pwd 
-/Users/lizeng/Google Drive/Yale
-```
-
-The `-P` here stands for `physical` (directory)
-
 
 ## <a name="vim"></a>vim
 
@@ -131,6 +155,7 @@ The `-P` here stands for `physical` (directory)
 	- `o`: insert a new row after current row
 	- `O`: insert a new row before current row
 	- `a`: insert after cursor
+	- `i`: insert at cursor
 
 - Cursor movement:		
 	- `0, :0`: beginning of row, page
@@ -142,8 +167,30 @@ The `-P` here stands for `physical` (directory)
 	- `Ctrl + u,d`: half page up, down
 	- `w,W,e,E,b,B`: jump cursor by words
 
+- [**tabs**](http://vim.wikia.com/wiki/Using_tab_pages):
+	- `:tabedit file`, `:tabfind file`: open new tab 
+	- `gt`, `gT`: next, previous tab
+	- `:tabonly`: close all other tabs
+	- `:tabnew`: open empty new tab
+	- can use abreviations, such as `:tabe`, `:tabf`, ...
+	- **`:Explorer`**: explore folder with vim
+
+- [**string substitution**](http://vim.wikia.com/wiki/Search_and_replace):
+	- `%s/pattern/replacement/g`: replace all occurrences
+	-  `s/pattern/replacement/g`: replace in current line
+	-  flags: 
+		-  `g` for global
+		-  `c` for confirmation
+		-  `i` for case-insensitive
+
+- **Visual Mode**
+	- type `v` to enter visual mode
+	- move cursor to select text
+	- `y`: copy  
+
 - Others:		
 	-`:syntax on/off` : turn on/off text-highlighting colorscheme
+	-`:Explore .` or `:e .`: explore current folder
 
 
 ## <a name="find"></a>find
@@ -162,13 +209,14 @@ We will introduce each of above parameters and some more in this section:
 	- `c` for creation time
 	- `a` for access time
 	- `+n` for greater than n days, similarly `-n` for within n days. Can also change measures
+	- can also use `amin, cmin, mmin` for minutes
 
 - `find ./ -name "PowerGod*"  -maxdepth 3`:    
 	set maximum searching depth in this directory; similarly use `mindepth` to set minimum searching depth
 	
 - `-iname` : to ignore case
 
-- piping finded results: 	
+- piping results found: 	
 	`-exec cp {} ~/LZfolder/  \;`: this command will copy the finded files to path `~/LZfolder/`
 	- finded file will be placed in the position of `{}` and execute the command
 
@@ -350,3 +398,29 @@ If we want to use the output of `command 1` in a sentence, we can do it in the f
 ... ...  `command 1` ... ... #  method 1   
 ... ... $(command 1)  ... ... # method 2   
 ```
+
+### Resolve symbolic links
+Say `courses` is a symbolic link I created. If I `cd` this link, and then print working directory:
+
+```bash
+$ cd courses 
+$ pwd
+/Users/lizeng/paths/courses
+```
+It's showing the symbolic path, not the absolute path. To get the absolute path, we can resolve the link through: 
+
+```bash 
+$ pwd -P 
+/Users/lizeng/Google Drive/Yale/courses
+
+# same also works for many other commands
+$ cd courses; cd ..; pwd
+/Users/lizeng/paths 
+$ cd courses; cd -P ..;pwd 
+/Users/lizeng/Google Drive/Yale
+```
+
+The `-P` here stands for `physical` (directory)
+
+## <a name='Link'>Useful Links</a> 
+- [**File permission** explained](https://linode.com/docs/tools-reference/linux-users-and-groups/)
