--- a/_posts/2017-3-24-python.md
+++ b/_posts/2017-3-24-python.md
@@ -1,10 +1,10 @@
 ---
 title:  "Python quick reference"
-date:   2017-8-25
+date:   2018-12-25
 layout: single
 author_profile: true
 comments: true
-tags: 
+tags: [python]
 ---
 
 **Resources**
@@ -76,13 +76,6 @@ tags:
 	- list
 	- tuple
 	- dictionary
-- global/local variables:    
-
-	```python
-	global var # assign `var` to its global value in a local environment (eg. in a function)
-	globals()  # gives a dict of global variables
-	locals()   # gives a dict of local variables
-	```
 	
 - the `dir()` function: 
 
@@ -90,6 +83,23 @@ tags:
 	print dir() # all variables in the current space
 	print dir(module_name) # all variable names in a module
 	```
+
+- the unpack operator `*`:
+
+	```python
+	x= ['A','B','C']
+	# pass A,B,C as separate arguments
+	fun(*x) 
+	```
+
+- global/local variables:    
+
+	```python
+	global var # assign `var` to its global value in a local environment (eg. in a function)
+	globals()  # gives a dict of global variables
+	locals()   # gives a dict of local variables
+	```
+
 
 ## <a name="FUNCTIONS" ></a> Functions
 - define a function:   
@@ -105,6 +115,23 @@ tags:
 	my_fun(x=2,y=3)	
 	```
 	Note that you can return multiple things separated by `,` as a ordered list of items. Let `out = my_fun(1,3)`. We can access values by `out[0]` (or `out['x']` in the commented case)
+
+- write a function with unknown number of arguments: **`*args` and `**kwargs`**
+
+	```python
+	# args handles all unnamed arguments and put in a tuple
+	# kwargs handles all named arguments and put in a dictionary
+	def myfun(*args,**kwargs): 
+		print(args)
+		print(kwargs)
+	# examples	
+	myfun(1,2,'x')
+	#(1, 2, 'x')
+	#{}	
+	myfun(x=1,y=2,z='x')
+	#()
+	#{'x': 1, 'y': 2, 'z': 'x'}
+	```
 
 - **Pass by reference vs value**   
 	**All python parameters are passed by reference**, i.e. when a parameter is used in a function, a new reference to the same object is created and used in the statements in the function body.
@@ -161,7 +188,6 @@ tags:
 	type in as long as you want
 	you can use multiple lines
 	"""  # the use of tripple quotes
-	
 	```
 	- use `%s` for strings, `%d` for integers, `%f` for floating point. Use `%r` when debugging for raw version of variables   
 	- if add a `,` at the end of a `print` sentence, then it doesn't end the line.
@@ -262,13 +288,13 @@ mystring = "a test sentence"
 # member functions
 mystring.split(' ') # split by ' ' into a vector of strings
 mystring.strip() # remove the return at the end (if any)
-mystring.split(' ') # split strings 
 mystring.join(seq) # concatenate values in seq using mystring as separater
 mystring.endswith(str) # test the end of mystring
 mystring.replace(str1, str2) # replace str1 with str2, return new string
 mystring.isupper(); mystring.islower() # test upper/lower case
 mystring.index('a')
 mystring.count('c') # get index and counts of a substring
+mystring.find("str") # find substring; if not found return -1
 
 # others
 str[1:3] 
@@ -299,6 +325,7 @@ mylist.reverse()
 mylist.insert(index, obj) # insertion 
 mylist.remove(object) # deletion
 mylist.count(item)  # count the frequency of item
+mylist.index(val) # get index of a value
 # ... etc
 
 # others
@@ -312,7 +339,14 @@ mylist + list2 # list concatenation
 del mylist[2] # item deletion
 3 in [1,2,3]  # membership test
 list(var) # convert to list
+
+a =  b = c = []
+# cautious! a,b,c refer to the same empty list
 ```
+
+Note:
+
+- **list slicing results in a copy of list**
 
 #### Tuples
 The main differences between lists and tuples are: Lists' size can be changed, while tuples cannot be updated. **Tuples can be thought of as read-only lists.**
@@ -356,9 +390,20 @@ mydict.setdefault(key,default_value) # use default_value if key not found
 ```python
 # set initialization
 s = set([...]) 
+s = {0}
 
 # operations
 s.add('element') # add elements
+s.remove("element")
+s.union(s2)
+s.intersection(s2)
+
+# set operators
+|, |=
+&, &=
+-, -=
+^, ^=
+>=, <=
 ```
 
 #### CLASSES
@@ -432,6 +477,46 @@ me2 = child("PowerGod",1.00,45.00) # using parent class method
 me2.printchild()  # using subclass method
 me2.printmyclass() # using parent class method
 
+# can also use super() to access parent class methods
+# eg
+	def __init__(self):
+		super().__init__(a,b,c)
+```
+
+**Notes:**
+
+- Python also allows multiple inheritance
+
+	```python
+class child(myclass1, myclass2):
+	pass
+	```
+	`child` can use member methods from both parents. If there are shared method names, the method from `myclass1` would be used
+
+## Python environment management
+Assume you have _Anaconda_ installed.
+
+```python
+# create a new environment
+conda create --name env_name python=3.5 ...
+conda create --name a_copy python=2.7 anaconda # with all current packages, but on different version of python
+conda create --name from_list --file requirements.txt
+
+# activate and deactivate
+source activate env_name
+source deactivate
+
+# list
+conda search pandas
+conda list pandas 
+conda list --explicit > requirements.txt # dump packages in env
+
+# install remove
+conda install <package-name>
+conda remove --name <env_name> --all # totally clear the environment
+
+# info
+conda info --env
 ```
 
 ## <a name="LIBRARY" ></a> Packages and Modules
@@ -554,6 +639,8 @@ The built-in data structures of Python are not easy to use when performing data 
 - **data structure** modules:
 	- `heapq` for implementations of heaps
 
+
+
 ## <a name="topics"></a> Selected topics
 **Sorting**
 
@@ -572,11 +659,21 @@ sorted(obj, key = myfun)
 ## <a name="other"></a> Others
 - get help:    
 	type `pydoc python_function` in terminal to get document for a python function
-	
+
 - IDE recommendation
 	- [Anaconda](https://www.continuum.io/downloads)
-- object identification:    
+- object ids (like address of an object in C):    
 	`id(var)`, unique identification number for each object
+
+- **output formatting**
+	- [link1](https://pyformat.info/) or [link2](https://www.python-course.eu/python3_formatted_output.php)
+	- syntax for format placeholder `{:[flags][width][.precision]type}`
+		- example: `{:10.2f}.format(27.1205)`
+		- types: `d, f, e, s`
+		- flags
+			- left/right shift: `<, >`
+			- center: `^`
+		- use variable: `"{v:10d}".format(v=10)`
 
 - assertion:   
 	`assert expression, "error message"`: if expression result in `False`, an error is incurred, and the error message is printed
@@ -584,13 +681,13 @@ sorted(obj, key = myfun)
 - **`try-except` exception handling, and `raise` exceptions**
 
 	```python
-	# simple exception handling
+	# basic syntax
 	try:
 		code may have error
 	except:
 		what to do when error exists
 	
-	# more exception handling
+	# more detailed
 	try:
 	   your operations ;
 	except ExceptionI, ExceptionII:
@@ -609,13 +706,54 @@ sorted(obj, key = myfun)
 		return
 	try:
 		raise_exception(20)
-	except Errortype:
-		actions on this exception
+	except Errortype as e:
+		actions on this exception(e)
 		raise  
 	........
 	
+	# define your own error type
+	class my_err(Exception):
+		def __init__(self,message):
+			...
+		# usage
+	try:
+		raise my_err("message")
+	except my_err as e:
+		actions(e)
 	```
 	for a list of Exception types, see [exception handling](https://www.tutorialspoint.com/python/python_exceptions.htm)
 	
 - reload module in interactive mode:   
 	when developing the package,  you need to constantly modify and update the modules that have been imported. To re-import after modification, you need to use `importlib.reload(module.file)`.
+
+- Write python **main function**:   
+	Python does not have a `int main()` function as C/C++ do, but you can do the following to realize something similar to `main()`:
+	
+	```python
+	import XXXXX
+	# you code here
+	def myfun():
+		# ....
+	if __name__ == "__main__":
+		# when file directly sourced
+		# do something 
+	else: 
+		# when file imported by other processes
+		# do soemthing else
+	```
+	- variable `__name__` represent the name of **current module**
+
+- the **`with` keyword**
+
+	```python
+	# syntax
+	with expression [as variable]:
+   		with-block
+   	# example 
+   	with open('output.txt', 'w') as f:
+   		f.write('Hi there!')
+   	"""
+   	1. can automatically close file at the end of with-block
+   	2. guarantees to close file no matter what exception raised in the block
+   	"""
+	```
